--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -18,4 +18,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: rajendrait99/workflow:latest
+          tags: suriee333/workflow:latest
